refactor: add folder 'assets' for image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="content">
             <header>
                 <div class="photo-block">
-                    <img class="my-photo" src="img/photo.jpg" alt="my photo">
+                    <img class="my-photo" src="assets/img/photo.jpg" alt="my photo">
                 </div>
                 <div class="about-me">
                     <h1>Kristina Khudaverdian</h1>
@@ -32,10 +32,10 @@
                         <h2>Experience</h2>
                         <p class="projects-text">Learning mini-projects (html&css, js):</p>
                         <ul class="projects-list">
-                            <li><a href="https://jsfiddle.net/kr1s10/52c76tak/"><img class="image-projects" src="img/slider.png" alt="slider"></a></li>
-                            <li><a href="https://jsfiddle.net/kr1s10/5coapeyt/1/"><img class="image-projects" src="img/magic-board.png" alt="magic board"></a></li>
-                            <li><a href="https://jsfiddle.net/kr1s10/dsreypz6/"><img class="image-projects" src="img/game.png" alt="game"></a></li>
-                            <li><a href="https://hookahquiz.netlify.app/"><img class="image-projects" src="img/quiz.png" alt="quiz"></a></li>
+                            <li><a href="https://jsfiddle.net/kr1s10/52c76tak/"><img class="image-projects" src="assets/img/slider.png" alt="slider"></a></li>
+                            <li><a href="https://jsfiddle.net/kr1s10/5coapeyt/1/"><img class="image-projects" src="assets/img/magic-board.png" alt="magic board"></a></li>
+                            <li><a href="https://jsfiddle.net/kr1s10/dsreypz6/"><img class="image-projects" src="assets/img/game.png" alt="game"></a></li>
+                            <li><a href="https://hookahquiz.netlify.app/"><img class="image-projects" src="assets/img/quiz.png" alt="quiz"></a></li>
                         </ul>
                     </div>
                     <div class="code-example">
@@ -57,7 +57,7 @@
                     <div class="english-level">
                         <h2>English</h2>
                         <p class="english-text">Intermediate<span class="test">(B1)</span> level by the online <a href="https://www.efset.org/"><span class="test">test</span></a> results.</p>
-                        <img class="image-english-level" src="img/english-level.png" alt="english-level">
+                        <img class="image-english-level" src="assets/img/english-level.png" alt="english-level">
                     </div>
                 </div>
                 <aside class="sidebar">
